--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-autopep8==1.4.4
-eulxml==1.1.3
-lxml==4.3.4
-pep8==1.7.1
-ply==3.11
-pycodestyle==2.5.0
-six==1.12.0
-tabulate==0.8.3
+autopep8
+eulxml
+lxml
+pycodestyle
+six
+tabulate
